// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs only render one tab title as selected 1`] = `
<styled.nav
  data-cosmos-key="tabs"
>
<<<<<<< HEAD
<<<<<<< HEAD
  <styled.div>
    <styled.a
      data-cosmos-key="tabs.item"
      key="0"
      onClick={[Function]}
      onKeyPress={[Function]}
      selected={true}
      tabIndex="0"
    />
    <styled.a
      data-cosmos-key="tabs.item"
      key="1"
      onClick={[Function]}
      onKeyPress={[Function]}
      selected={false}
      tabIndex="0"
    />
    <styled.a
      data-cosmos-key="tabs.item"
      key="2"
      onClick={[Function]}
      onKeyPress={[Function]}
      selected={false}
      tabIndex="0"
    />
  </styled.div>
=======
  <styled.ul>
=======
  <styled.ul
    role="tablist"
  >
>>>>>>> 1150e8c8... Update snapshots
    <styled.li>
      <styled.button
        aria-selected="false"
        data-cosmos-key="tabs.item"
        key="0"
        onClick={[Function]}
        role="tab"
        selected={true}
        tabindex="-1"
      />
    </styled.li>
    <styled.li>
      <styled.button
        aria-selected="false"
        data-cosmos-key="tabs.item"
        key="1"
        onClick={[Function]}
        role="tab"
        selected={false}
        tabindex="-1"
      />
    </styled.li>
    <styled.li>
      <styled.button
        aria-selected="false"
        data-cosmos-key="tabs.item"
        key="2"
        onClick={[Function]}
        role="tab"
        selected={false}
        tabindex="-1"
      />
    </styled.li>
  </styled.ul>
>>>>>>> 7f2f6c1c... Update snapshots
  <styled.div
    key=".0"
    title="Title 1"
  >
    <div
      className="content-1"
    />
  </styled.div>
</styled.nav>
`;

exports[`Tabs only render one tab title as selected 2`] = `
<styled.nav
  data-cosmos-key="tabs"
>
<<<<<<< HEAD
<<<<<<< HEAD
  <styled.div>
    <styled.a
      data-cosmos-key="tabs.item"
      key="0"
      onClick={[Function]}
      onKeyPress={[Function]}
      selected={false}
      tabIndex="0"
    />
    <styled.a
      data-cosmos-key="tabs.item"
      key="1"
      onClick={[Function]}
      onKeyPress={[Function]}
      selected={true}
      tabIndex="0"
    />
    <styled.a
      data-cosmos-key="tabs.item"
      key="2"
      onClick={[Function]}
      onKeyPress={[Function]}
      selected={false}
      tabIndex="0"
    />
  </styled.div>
=======
  <styled.ul>
=======
  <styled.ul
    role="tablist"
  >
>>>>>>> 1150e8c8... Update snapshots
    <styled.li>
      <styled.button
        aria-selected="false"
        data-cosmos-key="tabs.item"
        key="0"
        onClick={[Function]}
        role="tab"
        selected={false}
        tabindex="-1"
      />
    </styled.li>
    <styled.li>
      <styled.button
        aria-selected="false"
        data-cosmos-key="tabs.item"
        key="1"
        onClick={[Function]}
        role="tab"
        selected={true}
        tabindex="-1"
      />
    </styled.li>
    <styled.li>
      <styled.button
        aria-selected="false"
        data-cosmos-key="tabs.item"
        key="2"
        onClick={[Function]}
        role="tab"
        selected={false}
        tabindex="-1"
      />
    </styled.li>
  </styled.ul>
>>>>>>> 7f2f6c1c... Update snapshots
  <styled.div
    key=".1"
    title="Title 2"
  >
    <div
      className="content-2"
    />
  </styled.div>
</styled.nav>
`;

exports[`Tabs only render one tab title as selected 3`] = `
<styled.nav
  data-cosmos-key="tabs"
>
<<<<<<< HEAD
<<<<<<< HEAD
  <styled.div>
    <styled.a
      data-cosmos-key="tabs.item"
      key="0"
      onClick={[Function]}
      onKeyPress={[Function]}
      selected={false}
      tabIndex="0"
    />
    <styled.a
      data-cosmos-key="tabs.item"
      key="1"
      onClick={[Function]}
      onKeyPress={[Function]}
      selected={false}
      tabIndex="0"
    />
    <styled.a
      data-cosmos-key="tabs.item"
      key="2"
      onClick={[Function]}
      onKeyPress={[Function]}
      selected={true}
      tabIndex="0"
    />
  </styled.div>
=======
  <styled.ul>
=======
  <styled.ul
    role="tablist"
  >
>>>>>>> 1150e8c8... Update snapshots
    <styled.li>
      <styled.button
        aria-selected="false"
        data-cosmos-key="tabs.item"
        key="0"
        onClick={[Function]}
        role="tab"
        selected={false}
        tabindex="-1"
      />
    </styled.li>
    <styled.li>
      <styled.button
        aria-selected="false"
        data-cosmos-key="tabs.item"
        key="1"
        onClick={[Function]}
        role="tab"
        selected={false}
        tabindex="-1"
      />
    </styled.li>
    <styled.li>
      <styled.button
        aria-selected="false"
        data-cosmos-key="tabs.item"
        key="2"
        onClick={[Function]}
        role="tab"
        selected={true}
        tabindex="-1"
      />
    </styled.li>
  </styled.ul>
>>>>>>> 7f2f6c1c... Update snapshots
  <styled.div
    key=".2"
    title="Title 3"
  >
    <div
      className="content-3"
    />
  </styled.div>
</styled.nav>
`;

exports[`Tabs renders only selected tab content 1`] = `[Function]`;
